tests/sema/negative/vec_get_index_not_int.nv
fn main() : void {
    let xs : vec<int> = vec_new();
    let x : int = vec_get(xs, true);
    return;
}
